--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: "https://mahakata.com" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/gallery" # the subpath of your site, e.g. /blog
-title: "Gallery" # the name of your site, e.g. ACME Corp.
+url: "https://photo.mahaputera.art" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+title: "Gallery Photo" # the name of your site, e.g. ACME Corp.
